[package]
name = "libp2p-autonat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.4.16", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.30"
libp2p = { version = "0.53.2", features = ["tokio", "tcp", "noise", "yamux", "autonat", "identify", "macros"] }
